# DXFCLIENT

./: CMakeLists.txt  DNFAutoClient.cpp.back  DNFAutoClient.rc  Resource.h  client.cpp  client.h  config.ini  input_simulator.cpp  input_simulator.h  main.cpp  screen_capture.cpp  screen_capture.h  websocket_client.cpp  websocket_client.h
